# prexsyn-engine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pixi.toml  pyproject.toml  setup.py
.github/: generate_simple_index.py  set_build_version.py
.github/workflows/: build-conda.yml  build.yml  build_wheels.yml  publish-conda.yml  publish-pypi-placeholder.yml  publish-pypi.yml  publish-typing-stubs.yml  release_publish.yml  test.yml
csrc/: bind.cpp  binding.cpp  chemspace.cpp  chemspace.hpp  chemspace_bind.cpp  chemspace_test.cpp  debug.cpp  detokenizer.cpp  detokenizer.hpp  detokenizer_bind.cpp  fingerprints.cpp  fingerprints.hpp  fingerprints_bind.cpp  indexer.cpp  indexer.hpp  indexer_bind.cpp  main.cpp  molops.cpp  molops.hpp  molops_bind.cpp  pharmacophore.cpp  pharmacophore.hpp  pharmacophore_bind.cpp  synthesis.cpp  synthesis.hpp  synthesis_bind.cpp  synthesis_test.cpp  types.hpp  types_bind.cpp
csrc/chemistry/: bind.cpp  bind.hpp  binding.cpp  binding.hpp  chemistry.hpp  molecule.cpp  molecule.hpp  reaction.cpp  reaction.hpp  synthesis.cpp  synthesis.hpp  synthesis_test.cpp
csrc/chemspace/: bb_lib.cpp  bb_lib.hpp  bb_lib_factory.cpp  bb_lib_factory.hpp  bind.cpp  bind.hpp  binding.cpp  building_block.hpp  chemical_space.cpp  chemical_space.hpp  chemical_space_test.cpp  chemspace.cpp  chemspace.hpp  indexer.cpp  indexer.hpp  int_lib.cpp  int_lib.hpp  postfix_notation.hpp  reaction.cpp  reaction.hpp  rxn_lib.cpp  rxn_lib.hpp  rxn_lib_factory.cpp  rxn_lib_factory.hpp  rxn_lib_factory_test.cpp  synthesis.cpp  synthesis.hpp
csrc/container/: building_block_list.cpp  building_block_list.hpp  building_block_list_bind.cpp  building_block_list_test.cpp  reaction_list.cpp  reaction_list.hpp  reaction_list_bind.cpp  reaction_list_test.cpp
csrc/datapipe/: bind.cpp  binding.cpp  binding.hpp  buffer.cpp  buffer.hpp  buffer_test.cpp  data_pipeline.cpp  data_pipeline.hpp  datapipe.hpp  generator.cpp  generator.hpp
csrc/descriptor/: base.hpp  bind.cpp  binding.cpp  binding.hpp  descriptor.hpp  morgan.cpp  morgan.hpp  morgan_binding.hpp  synthesis.cpp  synthesis.hpp  synthesis_binding.hpp
csrc/detokenizer/: base.cpp  base.hpp  bind.cpp  bind.hpp  detokenizer.hpp  simple_mt.cpp  simple_mt.hpp
csrc/enumerator/: base.hpp  bind.cpp  bind.hpp  enumerator.hpp  random.cpp  random.hpp
csrc/feature/: bind.cpp  builder.hpp
csrc/featurizer/: base.cpp  base.hpp  base_bind.cpp  bind.cpp  builder.hpp  dtype.hpp  featurizer.hpp  fingerprint.cpp  fingerprint.hpp  fingerprint_bind.cpp  product_pharmacophore.cpp  product_pharmacophore.hpp  product_pharmacophore_bind.hpp  product_property.cpp  product_property.hpp  product_property_bind.hpp  product_structure.cpp  product_structure.hpp  product_structure_bind.hpp  product_test.cpp  pydict_builder.hpp  rdkit_descriptors.cpp  rdkit_descriptors.hpp  rdkit_descriptors_bind.cpp  scaffold.cpp  scaffold.hpp  scaffold_bind.cpp  substructures.cpp  substructures.hpp  substructures_bind.cpp  synthesis.cpp  synthesis.hpp  synthesis_bind.cpp  synthesis_bind.hpp
csrc/pipeline/: bind.cpp  data_buffer.hpp  data_buffer_test.cpp  pipeline.hpp  pipeline_v2.hpp  pipeline_v2_test.cpp
csrc/utility/: data_type.hpp  data_type_binding.hpp  logging.cpp  logging.hpp  random.hpp  serialization.hpp
csrc/utils/: algorithm.hpp  assert.hpp  logging.hpp  pickling.hpp  python_pickling.hpp
prexsyn_backend/: __init__.py  building_block_list.pyi  building_block_list_test.py  chemspace_test.py  detokenizer.pyi  featurizer.pyi  fingerprints.pyi  reaction_list_test.py  synthesis_test.py
prexsyn_engine/: __init__.py  building_block_list.pyi  detokenizer.pyi  feature.pyi  featurizer.pyi  pharmacophore.pyi  pipeline.pyi  reaction_list.pyi
prexsyn_engine-stubs/: chemistry.pyi  chemspace.pyi  descriptor.pyi  enumerator.pyi
prexsyn_engine/featurizer/: __init__.py  rdkit_descriptors.pyi  synthesis.pyi
prexsyn_engine/featurizers/: __init__.py
pypi-pkg/prexsyn_engine/: __init__.py
rattler-recipe/: build.sh  increment_build.py  recipe.yaml  variants.yaml
resources/test/: reaction.json
resources/test/chemspace_small_1/: bb.sdf  rxn.txt
scripts/: enamine_rxn115.py  test.py
stub-pkg/: prexsyn_engine-stubs  pyproject.toml
tests/: building_block_list_test.py  chemspace_test.py  reaction_list_test.py  synthesis_test.py
tests/chemistry/: test_molecule.py  test_reaction.py  test_synthesis.py
tests/chemspace/: test_chemspace.py  test_rxn_lib.py
tests/datapipe/: test_datapipe.py
tests/descriptor/: test_descriptor.py
tests/detokenizer/: test_detokenizer.py
tests/enumerator/: test_enumerator.py
