[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "prexsyn-engine"
version = "1.0.0.dev0"
requires-python = ">=3.10"

[tool.scikit-build]
build-dir = "build/scikit-build"
cmake.build-type = "Release"

[tool.cibuildwheel]
build = "*-manylinux_x86_64"
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/tests"

[tool.ruff]
exclude = ["prexsyn_engine-stubs/*.pyi"]
