[project]
name = "prexsyn-engine"
version = "1.0.0.dev0"
requires-python = ">=3.10"
authors = [{ name = "Shitong Luo", email = "luost26@gmail.com" }]
readme = "README.md"
license-files = ["LICENSE"]

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/scikit-build"
cmake.build-type = "Release"

[tool.cibuildwheel]
build = "*-manylinux_x86_64"
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/tests"

[tool.ruff]
exclude = ["prexsyn_engine-stubs/*.pyi"]

[tool.bumpversion]
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        \\.
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}.{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.pre_l]
values = ["dev", "final"]
optional_value = "final"
