[project]
name = "prexsyn-engine"
version = "1.1.0"
requires-python = ">=3.10"
authors = [{ name = "Shitong Luo", email = "luost26@gmail.com" }]
readme = "README.md"
license-files = ["LICENSE"]

[project.urls]
homepage = "https://github.com/luost26/prexsyn-engine"
documentation = "https://prexsyn.readthedocs.io/"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/scikit-build"
cmake.build-type = "Release"

[tool.cibuildwheel]
build = "*-manylinux_x86_64"
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/tests"

[tool.ruff]
exclude = ["prexsyn_engine-stubs/*.pyi"]

[tool.bumpversion]
commit = true
message = "Bump version: {current_version} -> {new_version}"

[tool.bumpversion.parts.pre_l]
values = ["dev", "final"]
optional_value = "final"
